got a dropdown menu for equation editor and realigned autocomplete, dropdown menu doesn't work for multiple functions in one equation text box, fix that tomorrow

--- a/sim/simulation.css
+++ b/sim/simulation.css
@@ -180,7 +180,7 @@ body {
 
 
 #nav {
-  width: 100% - 50px;
+  width: calc(100% - 50px);
   height: 15px;
 
   padding-left: 25px;
@@ -223,7 +223,7 @@ body {
   background-color: #35829fff;
   position: relative;
 
-  width: 100% - 50px;
+  width: calc(100% - 50px);
   height: 600px;
   
   top: 25px;
@@ -368,7 +368,7 @@ canvas {
 
 
 #datatable {
-  height: 100% - 2px;
+  height: calc(100% - 2px);
   width: 100%;
 }
 
@@ -392,7 +392,7 @@ canvas {
 
 #eqEditor {
   background-color: #2ea2ccff;
-  width: 100% - 50px;
+  width: calc(100% - 50px);
   position: relative;
   
   top: 30px;
@@ -408,7 +408,7 @@ canvas {
   border: 1px solid black;
   margin-left: 20px;
   margin-right: 20px;
-  width: 100% - 40px;
+  width: calc(100% - 40px);
   height: 350px;
   overflow: scroll;
   overflow-x: hidden;
@@ -471,7 +471,7 @@ canvas {
 
 #simParams {
   background-color: #35829fff;
-  width: 100% - 50px;
+  width: calc(100% - 50px);
   height: 220px;
   position: relative;
 
@@ -548,7 +548,7 @@ canvas {
   left: 20px;
   right: 20px;
   bottom: 20px;
-  width: 100%-40px;
+  width: calc(100% - 40px);
   height: 50px;
   background-color: #aa0000;
   color: white;
